フッター最下部に固定

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,6 +54,9 @@
 
  body{
   background-color: #f7f7f7;
+  position: relative;
+  min-height: 100vh;
+  padding-bottom: 80px;
  }
 
 header{
@@ -164,3 +167,43 @@ span.header__sub-title {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
+footer{
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  @media (max-width: 576px) {
+    width: 90%;
+  }
+  @media (min-width: 576px) {
+    width: 558px;
+  }
+
+  @media (min-width: 672px){
+    width: 651px;
+  }
+
+  @media (min-width: 768px) {
+    width: 744px;
+  }
+
+  @media (min-width: 880px){
+    width: 853px;
+  }
+
+  @media (min-width: 992px) {
+    width: 962px;
+  }
+
+  @media (min-width: 1096px) {
+    width: 1082px;
+  }
+
+  @media (min-width: 1200px) {
+    width: 1164px;
+  }
+
+  @media (min-width: 1360px) {
+    width: 1332px;
+  }
+}
