--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,3 +1,3 @@
-footer class="d-flex align-items-center justify-content-center mt-5 mb-4 pt-3"
-  p class="text-center"
+footer.mt-5.mb-4
+  p.text-center
     small Copyright &copy;2020 Fish-Review , All Rights Reserved.
