--- a/app/views/users/show_follow2.html.slim
+++ b/app/views/users/show_follow2.html.slim
@@ -26,3 +26,4 @@
                 = form_with(model: current_user.active_relationships.build) do |f| 
                   = hidden_field_tag :followed_id, user.id 
                   = f.submit "Follow", class: "btn btn-primary" 
+= paginate @users
