--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -1,7 +1,8 @@
 = form_with( model: [review, comment]) do |f| 
   .container
+    == render "shared/error_messages" , object: f.object
     .comment-form-partial.text-center.jumbotron.py-1.px-0
-      = f.text_area :content, id: "textarea",  class: "textarea col-12 pb-2" , placeholder: "コメントを入力..." 
+      = f.text_area :content, id: "textarea",  class: "textarea col-12 pb-2" , placeholder: "コメントを入力...(250文字以内)" 
       = button_tag type: 'submit', class: 'btn btn-default' do
         i.fa.fa-arrow-circle-down.fa-2x aria-hidden="true"
 
