--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,2 +1,3 @@
 $("#comments_area").html("<%= j(render 'index', comments: @review.comments) %>");
+$('#error_explanation').remove();
 $("#textarea").val('');
