--- a/app/views/reviews/index.html.slim
+++ b/app/views/reviews/index.html.slim
@@ -23,5 +23,5 @@ end
     - @reviews.each do |review|   
         .review-partial.col-12.col-md-6.col-lg-4.p-3
           .review-partial__box.shadow
-            == render "shared/index_review" , object: review
+            == render "shared/index_review" , review: review
             
