--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -43,7 +43,7 @@
     - @reviews.each do |review|   
         .review-partial.col-12.col-md-6.col-lg-4.p-3
           .review-partial__box.shadow
-            == render "shared/index_review" , object: review
+            == render "shared/index_review" , review: review
             .review-partial__time
               = time_ago_in_words(review.created_at) 
               |前
