--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -167,6 +167,24 @@ span.header__sub-title {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
+a.like-icon {
+  text-decoration: none;
+}
+
+a.is-like {
+  color: red;
+  &:hover {
+    color: red;
+  }
+}
+
+a.is-not-like {
+  color: gray;
+  &:hover {
+    color: gray;
+  }
+}
+
 footer{
   position: absolute;
   bottom: 0;
