--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -64,9 +64,11 @@
 }
 
 .review-partial__fish-name {
+  text-decoration: underline;
   font-size: 10px;
   position: relative; 
   z-index: 3;
+  
   @media (min-width: 576px) {
     font-size: 14px;
   }
@@ -80,7 +82,12 @@
     font-size: 18px;
   }
 }
-
+.review-partial__fish-name-color{
+  color: black;
+  &:hover{
+    color:gray;
+  }
+}
 .review-partial__time{
   position: absolute;
   bottom: 0.5rem;
@@ -93,6 +100,7 @@
   bottom: 0.5rem;
   left: 0.5rem;
   color: #C0C0C0;
+  z-index: 100;
 }
 
 .review-partial__review-item{
