--- a/app/views/shared/_index_review.html.slim
+++ b/app/views/shared/_index_review.html.slim
@@ -1,70 +1,70 @@
-/objectにはreviewインスタンスが入っている
+/reviewにはreviewインスタンスが入っている
 .review-partial__fish-name.text-center.py-2.mx-4.border-bottom
-  = link_to object.fish.name , fish_path(object.fish) , class: "text-dark"
+  = link_to review.fish.name , fish_path(review.fish) , class: "review-partial__fish-name-color"
 .row.review-partial__row-wrap.justify-content-center.px-4
-  = link_to "" , review_path(object) , class: "review-partial__entire-link"
+  = link_to "" , review_path(review) , class: "review-partial__entire-link-a"
   .col-6.p-3
-    - if object.avatar.attached?
-      = image_tag object.avatar.variant(combine_options:{resize:"200x200^",crop:"200x200+0+0",gravity: :center}).processed,class: "mx-auto d-block img-fluid img-thumbnail" 
+    - if review.avatar.attached?
+      = image_tag review.avatar.variant(combine_options:{resize:"200x200^",crop:"200x200+0+0",gravity: :center}).processed,class: "mx-auto d-block img-fluid img-thumbnail" 
     - else
       = image_tag "noimage.png" ,class: "mx-auto d-block img-fluid img-thumbnail" 
   .col-6.p-3.review-index__review
     .review-partial__user-info.pb-2.d-flex
       .review-partial__user-avatar
-        - if object.user.avatar.attached?
-          = image_tag object.user.avatar.variant(combine_options:{resize:"50x50^",crop:"50x50+0+0",gravity: :center}).processed,class: "d-inline-block user_image" 
+        - if review.user.avatar.attached?
+          = image_tag review.user.avatar.variant(combine_options:{resize:"50x50^",crop:"50x50+0+0",gravity: :center}).processed,class: "d-inline-block user_image" 
         - else
           = image_tag "noimage.png" ,class: "d-inline-block img-fluid user_image" 
       .review-partial__user-name-wrap
         p.text-dark.review-partial__user-name.text-truncate
-          = link_to object.user.name , user_path(object.user) , class: "pl-2 text-dark"
+          = link_to review.user.name , user_path(review.user) , class: "pl-2 text-dark"
         p.text-dark.review-partial__user-account_name.text-truncate
-          = link_to object.user.name , user_path(object.user) , class: "pl-2"
+          = link_to review.user.name , user_path(review.user) , class: "pl-2"
     p 
       span.review-partial__review-item-title 食味：
       span.text-warning.font-weight-bold.review-partial__review-item.review-partial__review-item-star
-        = star(object)
+        = star(review)
     p
       span.review-partial__review-item-title サイズ：
       span.review-partial__review-item
-        = object.fish_size
+        = review.fish_size
         | cm
     p
       span.review-partial__review-item-title 時期：
       span.review-partial__review-item
-        = object.season
+        = review.season
         | 月
     p
       span.review-partial__review-item-title 獲れた場所：
       span.review-partial__review-item
-        = object.place
+        = review.place
 
     p
       span.review-partial__review-item-title 場所(詳細)：
       span.review-partial__review-item
-        = object.place_detail
+        = review.place_detail
 
     p
       span.review-partial__review-item-title 熟成期間：
       span.review-partial__review-item
-        = object.preservation_period
+        = review.preservation_period
         | 日間
     p
       span.review-partial__review-item-title 血抜き：
       span.review-partial__review-item
-        = blood(object) 
+        = blood(review) 
 
   .col-11.px-2.pt-1.pb-2
     | 調理方法：
     span.review-partial__review-item
-      = object.recipe 
+      = review.recipe 
 
     .review-partial__review-item-taste
       p.px-2.pt-1.pb-5
-        = object.taste_imp
+        = review.taste_imp
 
 .review-partial__time
-  = time_ago_in_words(object.created_at) 
+  = time_ago_in_words(review.created_at) 
   |前
 .review-partial__like
-  == render "likes/like", object: object
+  == render "likes/like", review: review
