パーシャルのバグ修正、改行のバグ修正、recipeカラムを必須にした

--- a/app/views/comments/_index.html.slim
+++ b/app/views/comments/_index.html.slim
@@ -14,7 +14,7 @@
             .comment-partial__user-account-name.d-inline-block 
               = link_to comment.user.account_name, user_path(comment.user.id) 
             .comment-partial__content.mt-2
-              = comment.content 
+              = simple_format(comment.content) 
             
         .comment-partial__sub-wrap.text-right
           .comment-partial__time.d-inline-block
