レイアウト、バグ修正

--- a/app/views/shared/_index_review.html.slim
+++ b/app/views/shared/_index_review.html.slim
@@ -19,7 +19,7 @@
         p.text-dark.review-partial__user-name.text-truncate
           = link_to review.user.name , user_path(review.user) , class: "pl-2"
         p.text-dark.review-partial__user-account_name.text-truncate
-          = link_to review.user.name , user_path(review.user) , class: "pl-2"
+          = link_to review.user.account_name , user_path(review.user) , class: "pl-2"
     p 
       span.review-partial__review-item-title 食味：
       span.text-warning.font-weight-bold.review-partial__review-item.review-partial__review-item-star
