--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -22,9 +22,9 @@
           = f.file_field :picture, class: 'form-control'
         .form-group
           = f.label :password , 'パスワード'
-          = f.password_field :password, class: 'form-control' 
+          = f.password_field :password, class: 'form-control' , placeholder: "6〜10文字以内"
         .form-group
           = f.label :password_confirmation, "パスワード（確認）" 
-          = f.password_field :password_confirmation, class: 'form-control' 
+          = f.password_field :password_confirmation, class: 'form-control' , placeholder: "6〜10文字以内"
           .mt-3.text-center
             = f.submit "アカウント情報を編集", class: "btn btn-primary" 
