--- a/app/views/static_pages/about.html.slim
+++ b/app/views/static_pages/about.html.slim
@@ -1,7 +1,69 @@
 .about-image
-  span.about-font
-    |あなたの思い出の場所が、
-    br
-    |誰かの思い出の場所に。
-.about-title
-  = image_tag "/jeremy-stewart-BvXUtQhTQzk-unsplash.jpg", class: 'about-title-image img-fluid'
+  span.about__img-font
+    |魚の味を共有しよう！
+    
+
+
+p.about__exp-title.text-center.mt-5
+ span.about__header-logo Fish review
+ |とは
+p.about__exp-title.text-center.mt-2
+ |魚好きの為の食味共有サービスです。
+
+.container.about-container
+  .row.about__row
+    .col-12.col-md-6.about__exp
+      .about__col.text-center
+        = fa_icon "user 4x"
+        .about__col-bold-exp
+          | 信頼の出来る口コミ情報
+        .about__col-exp
+            span.about__exp-icon = fa_icon ("check 1.5x") 
+            |魚は獲れた場所、季節によって味が異なります。
+            br
+            |実際に食べたユーザーが情報を提供。信頼性の高い情報が得られます。
+    .col-12.col-md-6
+      = image_tag "/fish_photo.JPG", class: 'img-fluid about__exp-img'
+      
+  .row.about__row
+    .col-12.col-md-6.order-md-2.about__exp
+      .about__col.text-center
+        = fa_icon "search 4x"
+        .about__col-bold-exp
+          | 検索機能の充実
+        .about__col-exp
+            span.about__exp-icon = fa_icon ("check 1.5x") 
+            |場所ごと、季節ごとに美味しい魚を探すことが出来ます。
+    .col-12.col-md-6.order-md-1
+      = image_tag "/japan_map.png", class: 'img-fluid about__exp-img'
+
+  .row.about__row
+    .col-12.col-md-6.about__exp
+      .about__col.text-center
+        = fa_icon "book 4x"
+        .about__col-bold-exp
+          | 気になったらまず「お気に入り」
+        .about__col-exp
+            span.about__exp-icon = fa_icon ("check 1.5x") 
+            |投稿をお気に入りへ登録すればいつでも確認が可能です。
+    .col-12.col-md-6
+      = image_tag "/fish_photo2.JPG", class: 'img-fluid about__exp-img'
+
+
+  .row.about__row.justify-content-lg-center.pt-5.pb-5
+    .col-12.col-sm-6.col-lg-4.mb-2.about-col-bottom
+      p.text-center.about__bottom-button 新規登録の方
+      p.text-center.pt-3
+        = link_to  new_user_path  do
+          button.btn.btn-default.border
+            = fa_icon ("user 1.5x") 
+            span.pl-2 アカウント作成
+    .col-12.col-sm-6.col-lg-4.mb-2.about-col-bottom
+      p.text-center.about__bottom-button アカウントをお持ちの方
+      p.text-center.pt-3
+        = link_to  login_path  do
+          button.btn.btn-default.border
+            = fa_icon ("sign-in 1.5x") 
+            span.pl-2 ログイン
+
+
