--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,3 +1,4 @@
-footer.mt-5.mb-4
-  p.text-center
-    small Copyright &copy;2020 Fish-Review , All Rights Reserved.
+.container-fluid
+  footer.mt-5.mb-4
+    p.text-center
+      small Copyright &copy;2020 Fish-Review , All Rights Reserved.
