--- a/app/views/shared/_error_messages.html.slim
+++ b/app/views/shared/_error_messages.html.slim
@@ -1,7 +1,7 @@
 - if object.errors.any? 
   div#error_explanation
     div.alert.alert-danger
-      = pluralize(object.errors.count, "error")
+      = pluralize(object.errors.count, "個のエラーがあります")
       ul 
         - object.errors.full_messages.each do |msg|
-          li = msg
+          li.error_message = msg
