--- a/app/views/user_mailer/password_reset.html.slim
+++ b/app/views/user_mailer/password_reset.html.slim
@@ -1,12 +1,8 @@
-h1 Password reset
+h1 パスワード再設定
 
-p To reset your password click the link below:    
+p 下記のリンクをクリックしてパスワードを再設定して下さい。
 
 = link_to "Reset password", edit_password_reset_url(@user.reset_token,
                                                       email: @user.email) 
 
-p This link will expire in two hours.
-
-
-If you did not request your password to be reset, please ignore this email and
-your password will stay as it is.
+p リンクの有効期限は2時間です。
