--- a/app/views/user_mailer/password_reset.text.slim
+++ b/app/views/user_mailer/password_reset.text.slim
@@ -1,8 +1,6 @@
-To reset your password click the link below:
+下記のリンクをクリックしてパスワードを再設定して下さい。
 
 = edit_password_reset_url(@user.reset_token, email: @user.email) 
 
-This link will expire in two hours.
+リンクの有効期限は2時間です。
 
-If you did not request your password to be reset, please ignore this email and
-your password will stay as it is.
