--- a/app/views/shared/_index_review.html.slim
+++ b/app/views/shared/_index_review.html.slim
@@ -14,7 +14,7 @@
         - if review.user.avatar.attached?
           = image_tag review.user.avatar.variant(combine_options:{resize:"50x50^",crop:"50x50+0+0",gravity: :center}).processed,class: "d-inline-block user_image" 
         - else
-          = image_tag "noimage.png" ,class: "d-inline-block img-fluid user_image" 
+          = image_tag "/user_noimage.png" ,class: "d-inline-block img-fluid user_image" 
       .review-partial__user-name-wrap
         p.text-dark.review-partial__user-name.text-truncate
           = link_to review.user.name , user_path(review.user) , class: "pl-2"
