--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -24,7 +24,7 @@
               = link_to user.name , user_path(user) , class: "text-dark"
             p.show_follow__user-account-name
               = link_to user.account_name , user_path(user)
-          .col-sm-6.col-12.text-left.overflow-auto.border
+          .col-sm-6.col-12.text-left.overflow-auto.user__index-prof
             p.prof
               = user.prof
 
