--- a/app/views/users/show_follow2.html.slim
+++ b/app/views/users/show_follow2.html.slim
@@ -1,5 +1,7 @@
 .show_follow
-  h1.text-center.mt-5.mb-5 =@title
+  h1.text-center.mt-5.mb-5 
+    =@title 
+    | 一覧
   - if @users.present?
     .container.user__index-container
       - @users.each do |user| 
@@ -26,4 +28,9 @@
                 = form_with(model: current_user.active_relationships.build) do |f| 
                   = hidden_field_tag :followed_id, user.id 
                   = f.submit "Follow", class: "btn btn-primary" 
+  - else 
+    .show_follow-no-user.text-center
+      p 
+        = @title 
+        | はまだいません。
 = paginate @users
