guest userの場合プロフィール編集ボタン削除

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -32,7 +32,7 @@ header
             .dropdown-menu
               = link_to "ユーザー検索",   '#' ,class: "dropdown-item"
               = link_to "投稿検索",   '#' ,class: "dropdown-item"
-          - unless current_user.account_name == "@guest"
+          - unless guest_user?
             li.nav-item.ml-2.ml-xl-3
               = link_to "プロフィール編集" , edit_user_path(current_user),class: "nav-link"
           li.nav-item.ml-2.ml-xl-3
