--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -13,7 +13,7 @@
         .input-group
           .input-group-prepend
             .input-group-text @
-          = f.text_field :account_name, class: 'form-control' , placeholder: "9文字まで" 
+          = f.text_field :account_name, class: 'form-control' , placeholder: "9文字まで", value: @account_name 
         .form-group
           = f.label :email , 'メールアドレス'
           = f.email_field :email, class: 'form-control' 
