ヘッダーアイコン追加

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -222,3 +222,15 @@
 .users-new__optional{
   background-color: #F0FFFF !important;
 }
+
+.header-icon{
+  color: white;
+}
+
+.nav-link-icon{
+  padding-left: 0.3rem !important;
+}
+
+.sign-in_user{
+  font-size: 1.2rem;
+}
