taste_impを改行しないようにした

--- a/app/views/shared/_index_review.html.slim
+++ b/app/views/shared/_index_review.html.slim
@@ -60,7 +60,7 @@
       = review.recipe 
 
     .review-partial__review-item-taste.px-2.pt-1.pb-4
-      = simple_format(review.taste_imp)
+      = review.taste_imp
 
 .review-partial__time
   = time_ago_in_words(review.created_at) 
